--- a/README
+++ b/README
@@ -1,6 +1,8 @@
 Play application
 =================================
 
-Aplikacija je napisana u Play framework-u i isti je potreban za pokretanje aplikacije. Baza je takodjer lokalna.
+Aplikacija je napisana u Play framework-u i isti je potreban za pokretanje aplikacije. Tokom rada na aplikaciji koristena je lokalna baza. 
+Koristena je PostgreSQL baza i podaci su ubaceni preko csv importa. 
+CSV fileovi za import u bazu su dostavljeni u repozitoriju (Jobs.csv i MainDump22.csv).
 
 Komande "activator" i "run" pokrecu aplikaciju koja je hostana na localhost:9000, i preko tog porta joj se i pristupa.
